--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -9,8 +9,11 @@
     background-color: $mainOrange;
   }
 
-  &-- {
-    font-size: 1.25rem;
+  &--large {
     padding: 1.1rem 1.9rem;
+
+    @mixin atSmall {
+      font-size: 1.25rem;
+    }
   }
 }
