--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,5 +1,10 @@
 .large-hero{
   position: relative;
+  border-bottom: 10px solid $mainBlue;
+
+&__image{
+  display: block;
+}
 
   &__text-content { /* centers the content in the middle of the img element */
     position:absolute;
@@ -7,31 +12,43 @@
     transform: translateY(-50%);
     left:0;
     width: 100%;
-    text-align: center;
+    text-align: center ;
   }
 
   &__title {
     font-weight: 300;
     color: $mainBlue;
-    font-size: 4.8rem;
+    font-size: 2.4rem;
     margin: 0;
+
+    @mixin atSmall {
+      font-size: 4.8rem;
+    }
   }
 
   &__subtitle {
     font-weight: 300;
     color: $mainBlue;
-    font-size: 2.9rem;
+    font-size: 1.5rem;
     margin: 0;
+
+    @mixin atSmall{
+      font-size: 2.9rem;
+    }
   }
 
   &__description {
     color: #fff;
-    font-size: 1.875rem;
+    font-size: 1.1rem;
     font-weight: 100;
     text-shadow: 2px 2px 0 rbga(0, 0, 0, .1);
     max-width: 30rem;
     margin-left: auto;
     margin-right: auto;
+
+    @mixin atSmall {
+      font-size: 1.875rem;
+    }
   }
 
 }
